--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
             "windows"
         ],
         "quotes": [
-            "error",
+            "warn",
             "single"
         ],
         "semi": [
